Include explanations about ARIMA

--- a/Python/go-ave/GoAve Notebook.ipynb
+++ b/Python/go-ave/GoAve Notebook.ipynb
@@ -477,6 +477,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Lets take a look in the output. The first information it's about the prediction it self. As we're using a very basic vanilla ARIMA model without anykind of optimization with one-step forward prediction. It means that our model takes in consider the past and predict the next event. In our case, our prediction for the next data point in the series it's `2031-01-01 - 115.024455`, _i.e._ the shares will value `EU 115`.\n",
+    "\n",
+    "The second information it's about the `ARIMA(7, 1, 1)` these 3 parameters it's related about the mechanism that ARIMA uses to make predictions. The first one it's `p` that means the auto-regressive component of the serie, that means to measure the influence of the past in the current model. It's like to see rearview of the car to help the driving. The second parameter it's `d` that means the integration between a number of steps in the past to the actual series. And finally the last one it's the `q` that means the moving average component of the serie, where it is a combination of _n_ steps in the past smooth the data for the future. \n",
+    "\n",
+    "There's several techniques to discover the best parameters for ARIMA, since grid search and some analysis using `ACF` and `PACF` plots graphs. The main idea here it's to use a very simple model. This [blog post of Digital Ocean gives a nice overview about it](https://www.digitalocean.com/community/tutorials/a-guide-to-time-series-forecasting-with-arima-in-python-3).\n",
+    "\n",
+    "Another important piece of information it's the coeficients in the first column in the left side on the top. This column gives to us some information about the importance of the variables for the model. For now we have the information about the constant that has `const = 0.6814` and the autoregressive term with `ar.L1.D.close =  0.4866` as most significant variables and the moving average term with `ma.L1.D.close = -0.8856` the most harmful for the model. We have some measures as Standard Error `std err` and Z-Score `z` that helps us to get a real diagnosis of the model. \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Exploratory Regression\n",
     "\n",
     "In this case below we'll work with the data from [Residential Building dataset from UCI](https://archive.ics.uci.edu/ml/datasets/Residential+Building+Data+Set) where in the decription tells us that _\"Data set includes construction cost, sale prices, project variables, and economic variables corresponding to real estate single-family residential apartments in Tehran, Iran\"._\n",
@@ -1195,7 +1210,7 @@
     "\n",
     "XGBoost according the [documentation](https://xgboost.readthedocs.io/en/latest/) it is _XGBoost is an optimized distributed gradient boosting library designed to be highly efficient, flexible and portable. It implements machine learning algorithms under the Gradient Boosting framework. XGBoost provides a parallel tree boosting (also known as GBDT, GBM) that solve many data science problems in a fast and accurate way_.\n",
     "\n",
-    "The principle behind the XGBoost it it's extends the concept of the Gradient Boosting Machine where several weak classifiers/regressors are ensembled (put together for each step) with the advantage to permit some optimizations using loss functions for each step, _i.e_ we can put a cost function to make the model converge. \n",
+    "The principle behind the XGBoost it it's extends the concept of the Gradient Boosting Machine where several weak classifiers/regressors are ensembled (put together for each step) with the advantage to permit some optimizations using loss functions for each step, _i.e_ we can put a cost function to make the model converge. [This presentation made by one of the core developers of the tool gives a great overview about the principles behind XGBoost](https://www.slideshare.net/ShangxuanZhang/kaggle-winning-solution-xgboost-algorithm-let-us-learn-from-its-author).\n",
     "\n",
     "All of that without the problems of speed processing and this algo it's able to do classification and regression tasks. \n",
     "\n",
