--- a/Python/text-classification-reviews/Text Classification Tutorial.ipynb
+++ b/Python/text-classification-reviews/Text Classification Tutorial.ipynb
@@ -3191,7 +3191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -3229,7 +3229,44 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done  20 out of  20 | elapsed: 17.9min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finished imdb; write to file and proceed? [y/n]y\n",
+      "Running imdb data set\n",
+      "Best Accuracy : 0.8200\n",
+      "{'vocab_size': 4603, 'num_filters': 32, 'maxlen': 100, 'kernel_size': 3, 'embedding_dim': 50}\n",
+      "Test Accuracy : 0.8384\n",
+      "\n",
+      "\n",
+      "Running grid search for data set : yelp\n",
+      "Fitting 4 folds for each of 5 candidates, totalling 20 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done  20 out of  20 | elapsed: 19.8min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finished yelp; write to file and proceed? [y/n]y\n",
+      "Running yelp data set\n",
+      "Best Accuracy : 0.8224\n",
+      "{'vocab_size': 4603, 'num_filters': 128, 'maxlen': 100, 'kernel_size': 3, 'embedding_dim': 50}\n",
+      "Test Accuracy : 0.8268\n",
+      "\n",
+      "\n"
      ]
     }
    ],
